--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,62 @@
 
 Project name: White-Wolf-OP3-PA
 
+29/09/2017
+
+  * Linux 3.18.72 (Greg Kroah-Hartman) [0658fb3]
+  * bcache: fix bch_hprint crash and improve output (Michael Lyle) [71ba03e]
+  * bcache: fix for gc and write-back race (Tang Junhui) [849b6bd]
+  * bcache: Correct return value for sysfs attach errors (Tony Asleson) [42b5e74]
+  * bcache: correct cache_dirty_target in __update_writeback_rate() (Tang Junhui) [c25efff]
+  * bcache: Fix leak of bdev reference (Jan Kara) [89233ba]
+  * bcache: initialize dirty stripes in flash_dev_run() (Tang Junhui) [e06fbe5]
+  * media: uvcvideo: Prevent heap overflow when accessing mapped controls (Guenter Roeck) [9308df7]
+  * media: v4l2-compat-ioctl32: Fix timespec conversion (Daniel Mentz) [e66b507]
+  * PCI: shpchp: Enable bridge bus mastering if MSI is enabled (Aleksandr Bezzubikov) [2b72fa3]
+  * ARC: Re-enable MMU upon Machine Check exception (Jose Abreu) [87476a9]
+  * tracing: Apply trace_clock changes to instance max buffer (Baohong Liu) [4a29915]
+  * ftrace: Fix selftest goto location on error (Steven Rostedt (VMware)) [479cf92]
+  * scsi: qla2xxx: Fix an integer overflow in sysfs code (Dan Carpenter) [0d2607f]
+  * scsi: sg: fixup infoleak when using SG_GET_REQUEST_TABLE (Hannes Reinecke) [41f1f26]
+  * scsi: sg: factor out sg_fill_request_table() (Hannes Reinecke) [fec2890]
+  * scsi: sg: off by one in sg_ioctl() (Dan Carpenter) [37e2eab]
+  * scsi: sg: use standard lists for sg_requests (Hannes Reinecke) [70aa1eb]
+  * scsi: sg: remove 'save_scat_len' (Hannes Reinecke) [1a11a86]
+  * scsi: zfcp: trace high part of "new" 64 bit SCSI LUN (Steffen Maier) [386eb5e]
+  * scsi: zfcp: trace HBA FSF response by default on dismiss or timedout late response (Steffen Maier) [08c1928]
+  * scsi: zfcp: fix payload with full FCP_RSP IU in SCSI trace records (Steffen Maier) [bf801af]
+  * scsi: zfcp: fix missing trace records for early returns in TMF eh handlers (Steffen Maier) [d71bf10]
+  * scsi: zfcp: add handling for FCP_RESID_OVER to the fcp ingress path (Benjamin Block) [25bb786]
+  * scsi: zfcp: fix queuecommand for scsi_eh commands when DIX enabled (Steffen Maier) [6f95cd3]
+  * skd: Submit requests to firmware before triggering the doorbell (Bart Van Assche) [ac72c6f]
+  * skd: Avoid that module unloading triggers a use-after-free (Bart Van Assche) [d51e868]
+  * md/bitmap: disable bitmap_resize for file-backed bitmaps. (NeilBrown) [bed4dfc]
+  * block: Relax a check in blk_start_queue() (Bart Van Assche) [5c88f17]
+  * powerpc: Fix DAR reporting when alignment handler faults (Michael Ellerman) [9c65cf1]
+  * ext4: fix incorrect quotaoff if the quota feature is enabled (zhangyi (F)) [556d265]
+  * crypto: AF_ALG - remove SGL terminator indicator when chaining (Stephan Mueller) [573fa0b]
+  * Input: i8042 - add Gigabyte P57 to the keyboard reset table (Kai-Heng Feng) [fe3b295]
+  * ip6_gre: fix endianness errors in ip6gre_err (Sabrina Dubroca) [14206b0]
+  * Revert "usb: musb: fix tx fifo flush handling again" (Greg Kroah-Hartman) [71eb2c8]
+  * f2fs: check hot_data for roll-forward recovery (Jaegeuk Kim) [9367bd7]
+  * ipv6: fix typo in fib6_net_exit() (Eric Dumazet) [f978f1d]
+  * ipv6: fix memory leak with multiple tables during netns destruction (Sabrina Dubroca) [ac45e65]
+  * tcp: initialize rcv_mss to TCP_MIN_MSS instead of 0 (Wei Wang) [c5ea4c2]
+  * Revert "net: phy: Correctly process PHY_HALTED in phy_stop_machine()" (Florian Fainelli) [af5974c]
+  * qlge: avoid memcpy buffer overflow (Arnd Bergmann) [ef44247]
+  * ipv6: accept 64k - 1 packet length in ip6_find_1stfragopt() (Stefano Brivio) [a60a964]
+  * UPSTREAM: PM / sleep: make PM notifiers called symmetrically (Lianwei Wang) [8015d63]
+  * PM / sleep: fix device reference leak in test_suspend (Johan Hovold) [2219dc8]
+  * PM / hibernate: Fix rtree_next_node() to avoid walking off list ends (James Morse) [fb852eb]
+  * PM / hibernate: Restore processor state before using per-CPU variables (Thomas Garnier) [72be662]
+  * PM / runtime: Avoid false-positive warnings from might_sleep_if() (Rafael J. Wysocki) [61d09cb]
+  * kernel/panic.c: add missing n (Jiri Slaby) [4a8597b]
+  * cpufreq: governor: Name delayed-work as dwork (Viresh Kumar) [4005399]
+  * Governors: cpufreq_relaxed: Name delayed-work as dwork Delayed work was named as 'work' and to access work within it we do work.work. Not much readable. Rename delayed_work as 'dwork'. (acuicultor) [7eb7921]
+  * Governors: cpufreq_despair: Name delayed-work as dwork Delayed work was named as 'work' and to access work within it we do work.work. Not much readable. Rename delayed_work as 'dwork'. (acuicultor) [5d54f2b]
+  * arm64: strcmp: Align to cache and preload (Joe Maples) [4d908b6]
+  * display: update from OxygenOS 4.5.0 (Slawek) [55e70f1]
+
 23/09/2017
 
   * alarmtimer: Program mpm wakeup time in milliseconds (Mohit Aggarwal) [75235e1]
