--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,68 @@
 
 Project name: White-Wolf-OP3-PA
 
+8/10/2017
+
+  * Linux 3.18.74 (Greg Kroah-Hartman) [9064305]
+  * crypto: algif_skcipher - Load TX SG list after waiting (Herbert Xu) [7f501f3]
+  * staging: nvec: remove duplicated const (Peng Fan) [3e3c296]
+  * ttpci: address stringop overflow warning (Arnd Bergmann) [7ffc8a7]
+  * ALSA: au88x0: avoid theoretical uninitialized access (Arnd Bergmann) [db594bf]
+  * IB/qib: fix false-postive maybe-uninitialized warning (Arnd Bergmann) [b2cfdc2]
+  * libata: transport: Remove circular dependency at free time (Gwendal Grignou) [9648bf7]
+  * xfs: remove kmem_zalloc_greedy (Darrick J. Wong) [a05310b]
+  * md/raid10: submit bio directly to replacement disk (Shaohua Li) [12aece3]
+  * rds: ib: add error handle (Zhu Yanjun) [7af7c05]
+  * parisc: perf: Fix potential NULL pointer dereference (Arvind Yadav) [77798dc]
+  * netfilter: nfnl_cthelper: fix incorrect helper->expect_class_max (Liping Zhang) [a425914]
+  * exynos-gsc: Do not swap cb/cr for semi planar formats (Thibault Saunier) [b5ddde6]
+  * netfilter: invoke synchronize_rcu after set the _hook_ to NULL (Liping Zhang) [e6ddbad]
+  * mmc: sdio: fix alignment issue in struct sdio_func (Heiner Kallweit) [77b48dc]
+  * usb: plusb: Add support for PL-27A1 (Roman Spychała) [de1e018]
+  * team: fix memory leaks (Pan Bian) [9562877]
+  * net/packet: check length in getsockopt() called with PACKET_HDRLEN (Alexander Potapenko) [400808c]
+  * net: core: Prevent from dereferencing null pointer when releasing SKB (Myungho Jung) [d52b744]
+  * audit: log 32-bit socketcalls (Richard Guy Briggs) [f0168da]
+  * partitions/efi: Fix integer overflow in GPT size calculation (Alden Tondettar) [4dc2139]
+  * USB: serial: mos7840: fix control-message error handling (Johan Hovold) [c0006b1]
+  * USB: serial: mos7720: fix control-message error handling (Johan Hovold) [079eb55]
+  * IB/ipoib: Replace list_del of the neigh->list with list_del_init (Feras Daoud) [e120e59]
+  * IB/ipoib: rtnl_unlock can not come after free_netdev (Feras Daoud) [6fc84b9]
+  * IB/ipoib: Fix deadlock over vlan_mutex (Feras Daoud) [86f8abf]
+  * tty: goldfish: Fix a parameter of a call to free_irq (Christophe JAILLET) [80ee9d9d]
+  * ARM: 8635/1: nommu: allow enabling REMAP_VECTORS_TO_RAM (Afzal Mohammed) [f1d6f1e]
+  * hwmon: (gl520sm) Fix overflows and crash seen when writing into limit attributes (Guenter Roeck) [c74d9e1]
+  * sh_eth: use correct name for ECMR_MPDE bit (Niklas Söderlund) [2cb9ef9]
+  * MIPS: Ensure bss section ends on a long-aligned address (Paul Burton) [2e12432]
+  * RDS: RDMA: Fix the composite message user notification (Santosh Shilimkar) [d3fda29]
+  * drm: bridge: add DT bindings for TI ths8135 (Bartosz Golaszewski) [9f9b3cd]
+  * Linux 3.18.73 (Greg Kroah-Hartman) [6f3de61]
+  * fix xen_swiotlb_dma_mmap prototype (Arnd Bergmann) [4fe33d5]
+  * swiotlb-xen: implement xen_swiotlb_dma_mmap callback (Stefano Stabellini) [eb8769c]
+  * video: fbdev: aty: do not leak uninitialized padding in clk to userspace (Vladis Dronov) [276386b]
+  * x86/fpu: Don't let userspace set bogus xcomp_bv (Eric Biggers) [b4ee36f]
+  * btrfs: prevent to set invalid default subvolid (satoru takeuchi) [e9fb866]
+  * PCI: Fix race condition with driver_override (Nicolai Stange) [3f7b3d9]
+  * kvm: nVMX: Don't allow L2 to access the hardware CR8 (Jim Mattson) [19caa09]
+  * arm64: Make sure SPsel is always set (Marc Zyngier) [66dc2eda]
+  * bsg-lib: don't free job in bsg_prepare_job (Christoph Hellwig) [72f7744]
+  * nl80211: check for the required netlink attributes presence (Vladis Dronov) [41674d3]
+  * vfs: Return -ENXIO for negative SEEK_HOLE / SEEK_DATA offsets (Andreas Gruenbacher) [96c5955]
+  * SMB3: Don't ignore O_SYNC/O_DSYNC and O_DIRECT flags (Steve French) [43ca924]
+  * SMB: Validate negotiate (to protect against downgrade) even if signing off (Steve French) [dc29499]
+  * powerpc/pseries: Fix parent_dn reference leak in add_dt_node() (Tyrel Datwyler) [8d86668]
+  * KEYS: prevent KEYCTL_READ on negative key (Eric Biggers) [7e96a4f]
+  * KEYS: prevent creating a different user's keyrings (Eric Biggers) [e223892]
+  * KEYS: fix writing past end of user-supplied buffer in keyring_read() (Eric Biggers) [eee8712]
+  * crypto: talitos - fix sha224 (LEROY Christophe) [36deb7b]
+  * scsi: scsi_transport_iscsi: fix the issue that iscsi_if_rx doesn't parse nlmsg properly (Xin Long) [89f13d6]
+  * tracing: Erase irqsoff trace with empty write (Bo Yan) [57f2a26]
+  * tracing: Fix trace_pipe behavior for instance traces (Tahsin Erdogan) [53e8c97]
+  * KVM: PPC: Book3S: Fix race and leak in kvm_vm_ioctl_create_spapr_tce() (Paul Mackerras) [9ec6b82]
+  * mac80211: flush hw_roc_start work before cancelling the ROC (Avraham Stern) [e768011]
+  * cifs: release auth_key.response for reconnect. (Shu Wang) [4dcd507]
+  * cifs: release cifs root_cred after exit_cifs (Shu Wang) [e99d4a5]
+
 29/09/2017
 
   * Linux 3.18.72 (Greg Kroah-Hartman) [0658fb3]
