--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,85 @@
 
 Project name: White-Wolf-OP3-PA
 
+27/10/2017
+
+  * cpufreq: add Smartmax EPS gov by maxwen and fix compiling (Slawek) [4d13e7d]
+  * msm: mdss: check the length of the external input buffer properly (Ashish Garg) [b627871]
+  * msm: kgsl: Fix calculation of size in _load_regfile (Archana Sriram) [27727b5]
+  * msm: kgsl: Fix size check issue in _read_fw2_block_header() (Archana Obannagari) [f063cfb]
+  * qcacld-2.0: Update to CAF LA.UM.5.5.r1-06100-8x96.0 (Sultanxda) [9aa8bb2]
+  * Linux 3.18.78 (Greg Kroah-Hartman) [5683a40]
+  * FS-Cache: fix dereference of NULL user_key_payload (Eric Biggers) [65ce4d1]
+  * af_packet: don't pass empty blocks for PACKET_V3 (Alexander Drozdov) [044a91b]
+  * parisc: Fix double-word compare and exchange in LWS code on 32-bit kernels (John David Anglin) [4d25b52]
+  * parisc: Avoid trashing sr2 and sr3 in LWS code (John David Anglin) [aaf936a]
+  * cls_api.c: Fix dumping of non-existing actions' stats. (Ignacy Gawędzki) [d39e10b]
+  * KEYS: don't let add_key() update an uninstantiated key (David Howells) [95f58c6]
+  * lib/digsig: fix dereference of NULL user_key_payload (Eric Biggers) [039fef4]
+  * KEYS: encrypted: fix dereference of NULL user_key_payload (Eric Biggers) [3f9a3e0]
+  * bus: mbus: fix window size calculation for 4GB windows (Jan Luebbe) [a27a388]
+  * brcmsmac: make some local variables 'static const' to reduce stack size (Arnd Bergmann) [bc57ad0]
+  * i2c: ismt: Separate I2C block read from SMBus block read (Pontus Andersson) [7a0ae6f]
+  * ALSA: hda: Remove superfluous '-' added by printk conversion (Takashi Iwai) [9ddbb49]
+  * ALSA: seq: Enable 'use' locking in all configurations (Ben Hutchings) [5c21e3c]
+  * can: esd_usb2: Fix can_dlc value for received RTR, frames (Stefan Mätje) [e6975af]
+  * can: gs_usb: fix busy loop if no more TX context is available (Wolfgang Grandegger) [89b38e0]
+  * usb: hub: Allow reset retry for USB2 devices on connect bounce (Mathias Nyman) [c477185b]
+  * usb: quirks: add quirk for WORLDE MINI MIDI keyboard (Felipe Balbi) [4a08c61]
+  * usb: cdc_acm: Add quirk for Elatec TWN3 (Maksim Salau) [a33357b]
+  * USB: serial: metro-usb: add MS7820 device id (Johan Hovold) [5b83c38]
+  * USB: core: fix out-of-bounds access bug in usb_get_bos_descriptor() (Alan Stern) [501e1dc]
+  * USB: devio: Revert "USB: devio: Don't corrupt user memory" (Hans de Goede) [7fd5d4b]
+  * Linux 3.18.77 (Greg Kroah-Hartman) [c6ea729]
+  * Revert "tty: goldfish: Fix a parameter of a call to free_irq" (Greg Kroah-Hartman) [f7eb83e]
+  * target/iscsi: Fix unsolicited data seq_end_offset calculation (Varun Prakash) [1b8e4ec]
+  * uapi: fix linux/mroute6.h userspace compilation errors (Dmitry V. Levin) [dae8610]
+  * uapi: fix linux/rds.h userspace compilation errors (Dmitry V. Levin) [4777c44]
+  * scsi: scsi_dh_emc: return success in clariion_std_inquiry() (Dan Carpenter) [d75a94b]
+  * ocfs2/dlmglue: prepare tracking logic to avoid recursive cluster lock (Eric Ren) [37d9266]
+  * crypto: xts - Add ECB dependency (Milan Broz) [1ff361b]
+  * net/mlx4_core: Fix VF overwrite of module param which disables DMFS on new probed PFs (Majd Dibbiny) [c1e5f05]
+  * Btrfs: send, fix failure to rename top level inode due to name collision (Robbie Ko) [41d123d]
+  * iio: adc: xilinx: Fix error handling (Christophe JAILLET) [ded586e]
+  * netfilter: nf_ct_expect: Change __nf_ct_expect_check() return value. (Jarno Rajahalme) [4de6865]
+  * irqchip/crossbar: Fix incorrect type of local variables (Franck Demathieu) [b0554f2]
+  * watchdog: kempld: fix gcc-4.3 build (Arnd Bergmann) [470233c]
+  * locking/lockdep: Add nest_lock integrity test (Peter Zijlstra) [874c269]
+  * Revert "bsg-lib: don't free job in bsg_prepare_job" (Greg Kroah-Hartman) [1ec9e9b]
+  * net: Set sk_prot_creator when cloning sockets to the right proto (Christoph Paasch) [76c9b29]
+  * packet: in packet_do_bind, test fanout with bind_lock held (Willem de Bruijn) [ebe1fb8]
+  * l2tp: fix race condition in l2tp_tunnel_delete (Sabrina Dubroca) [de4ad1b]
+  * l2tp: Avoid schedule while atomic in exit_net (Ridge Kennedy) [f4c996b]
+  * vti: fix use after free in vti_tunnel_xmit/vti6_tnl_xmit (Alexey Kodanev) [dd4d31b]
+  * isdn/i4l: fetch the ppp_write buffer in one shot (Meng Xu) [5f9597e]
+  * packet: hold bind lock when rebinding to fanout hook (Willem de Bruijn) [b6b0dfc]
+  * bpf/verifier: reject BPF_ALU64|BPF_END (Edward Cree) [b547893]
+  * sctp: potential read out of bounds in sctp_ulpevent_type_enabled() (Dan Carpenter) [04bbdad]
+  * ext4: avoid deadlock when expanding inode size (Jan Kara) [3c397c2]
+  * drm/dp/mst: save vcpi with payloads (Harry Wentland) [cdbb90f]
+  * x86/mm: Disable preemption during CR3 read+write (Sebastian Andrzej Siewior) [b9320b7]
+  * Linux 3.18.76 (Greg Kroah-Hartman) [9ca6c68]
+  * Revert "usb: gadget: inode.c: fix unbalanced spin_lock in ep0_write" (Greg Kroah-Hartman) [828073f]
+  * ALSA: seq: Fix missing NULL check at remove_events ioctl (Takashi Iwai) [d507802]
+  * USB: serial: console: fix use-after-free after failed setup (Johan Hovold) [96b16de]
+  * USB: serial: qcserial: add Dell DW5818, DW5819 (Shrirang Bagul) [4c15d2e]
+  * USB: serial: option: add support for TP-Link LTE module (Henryk Heisig) [d70f926]
+  * USB: serial: cp210x: add support for ELV TFD500 (Andreas Engel) [091a977]
+  * fix unbalanced page refcounting in bio_map_user_iov (Vitaly Mayatskikh) [499cfe6]
+  * direct-io: Prevent NULL pointer access in submit_page_section (Andreas Gruenbacher) [cd41a4d]
+  * usb: gadget: composite: Fix use-after-free in usb_composite_overwrite_options (Andrew Gabbasov) [b8ce285]
+  * ALSA: caiaq: Fix stray URB at probe error path (Takashi Iwai) [ce9dd75]
+  * ALSA: seq: Fix copy_from_user() call inside lock (Takashi Iwai) [649028b]
+  * ALSA: seq: Fix use-after-free at creating a port (Takashi Iwai) [8810756]
+  * ALSA: usb-audio: Kill stray URB at exiting (Takashi Iwai) [6cc7b24]
+  * iommu/amd: Finish TLB flush in amd_iommu_unmap() (Joerg Roedel) [0d68dee]
+  * usb: renesas_usbhs: Fix DMAC sequence for receiving zero-length packet (Kazuya Mizuguchi) [170fbe1]
+  * KVM: nVMX: fix guest CR4 loading when emulating L2 to L1 exit (Haozhong Zhang) [9c74ecc]
+  * crypto: shash - Fix zero-length shash ahash digest crash (Herbert Xu) [75c5073]
+  * HID: usbhid: fix out-of-bounds bug (Jaejoong Kim) [b8e7dae]
+  * CIFS: Reconnect expired SMB sessions (Pavel Shilovsky) [525a288]
+  * ext4: in ext4_seek_{hole,data}, return -ENXIO for negative offsets (Darrick J. Wong) [730c566]
+
 17/10/2017
 
   * video: mdss: LiveDisplay driver (Steve Kondik) [990002b]
